prevent horizontal scrolling on article pages

--- a/themes/startwords/assets/scss/article/_single.scss
+++ b/themes/startwords/assets/scss/article/_single.scss
@@ -1,6 +1,9 @@
 /* single article page styles */
 
 body.article {
+
+    // prevent horizontal scrolling
+    main { overflow-x: hidden; }
     
     // embedded content
     .sketchfab-embed-wrapper > iframe {
